# vortex-client

./: Cargo.toml  README.md
client/: Cargo.toml
client/examples/: income.rs  vote.rs
client/src/: lib.rs
types/: Cargo.toml
types/src/: income.rs  lib.rs  voting.rs
