[package]
name = "vortex-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
reqwest = { workspace = true , features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
vortex-types = { workspace = true }
